--- a/src/Com.Gridly/Com.Gridly.csproj
+++ b/src/Com.Gridly/Com.Gridly.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <TargetFrameworks>netstandard2.1;netcoreapp3.1;net47;net5.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <AssemblyName>Com.Gridly</AssemblyName>
     <PackageId>Com.Gridly</PackageId>
     <OutputType>Library</OutputType>
