Remove for test project

--- a/src/Com.Gridly.Test/Com.Gridly.Test.csproj
+++ b/src/Com.Gridly.Test/Com.Gridly.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>Com.Gridly.Test</AssemblyName>
     <RootNamespace>Com.Gridly.Test</RootNamespace>
-    <TargetFrameworks>netcoreapp3.0;netcoreapp3.1;net47;net5.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
