--- a/src/Com.Gridly/Com.Gridly.csproj
+++ b/src/Com.Gridly/Com.Gridly.csproj
@@ -6,13 +6,13 @@
     <AssemblyName>Com.Gridly</AssemblyName>
     <PackageId>Com.Gridly</PackageId>
     <OutputType>Library</OutputType>
-    <Authors>OpenAPI</Authors>
+    <Authors>LocalizeDirect AB</Authors>
     <Company>LocalizeDirect AB</Company>
-    <AssemblyTitle>OpenAPI Library</AssemblyTitle>
-    <Description>A library generated from a OpenAPI doc</Description>
-    <Copyright>No Copyright</Copyright>
+    <AssemblyTitle>Gridly SDK</AssemblyTitle>
+    <Description>Gridly NetCore SDK 1.2.0</Description>
+    <Copyright>Copyright @ 2022 LocalizeDirect AB</Copyright>
     <RootNamespace>Com.Gridly</RootNamespace>
-    <Version>1.0.0</Version>
+    <Version>1.2.0</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Com.Gridly.xml</DocumentationFile>
     <RepositoryUrl>https://github.com/GIT_USER_ID/GIT_REPO_ID.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
